[package]
name = "lumina_engine"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["webgpu"]
webgpu = []

[dependencies]
wgpu = { version = "22.1.0", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
js-sys = "0.3.69"
winit = "0.28"
web-sys = { version = "0.3.69", features = [
    "HtmlCanvasElement", 
    "Window", 
    "Document", 
    "console", 
    "HtmlImageElement", 
    "CanvasRenderingContext2d", 
    "ImageData", 
    "KeyboardEvent",
    "MouseEvent", 
    "WheelEvent",
    "CaretStateChangedEventInit",
    "DomRect",
    "Element",
    "Location"] }
cgmath = "0.18"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3.42"
tokio = { version ="1.39.2", features = ["time"] }
tobj = { version = "4.0.2", features = ["async"] }
reqwest = "0.12.7"
glob = "0.3"
anyhow = "1.0.86"
fs_extra = "1.2"
getrandom = { version = "0.2", features = ["js"] }
image = "0.25.2"
serde = { version = "1.0.209", features = ["derive"] } 
serde_json = "1.0.127"
glam = "0.29.0"
